corrections adjusted for authorisation add missing test for service and controller